lib/oopm/parsing/literal.treetop
module OOPM
module Parsing

grammar Literal
  include Keyword

  rule literal
    (symbol / string / number / name) <LiteralNode>
  end

  rule symbol
    ":" (('\'' [_a-zA-Z0-9]+ '\'') / ('"' [_a-zA-Z0-9]+ '"') / name)
  end

  rule string
    (double_quoted / single_quoted )
  end

  rule single_quoted
    ('\'' (('\\\'') / (!'\'' .))* '\'')
  end

  rule double_quoted
    ('"' (('\"') / (!'"' .))* '"')
  end

  rule number
    ([\d]* "."? [\d]+) / ([\d]+)
  end

  rule name
    !(keyword ![_a-zA-Z0-9]) [_a-zA-Z] [_a-zA-Z0-9]*
  end
end

end
end
